targeted: fix last target dropped